# PunchPressVision

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  REQUIREMENTS.md  UI_DESIGN_LANGUAGE.md  vcpkg-configuration.json  vcpkg.json
PunchPressVision/: CMakeLists.txt
PunchPressVision/App/PunchPressApp/: CMakeLists.txt
PunchPressVision/App/PunchPressApp/src/: PunchPressApp.cpp
PunchPressVision/App/PunchPressApp/test/: CMakeLists.txt
PunchPressVision/Business/: CMakeLists.txt
PunchPressVision/Business/Business/: CMakeLists.txt
PunchPressVision/Business/Business/src/: Business.cpp
PunchPressVision/Business/Business/test/: CMakeLists.txt
PunchPressVision/Business/CalibBun/: CMakeLists.txt
PunchPressVision/Business/CalibBun/src/: CalibBun.cpp
PunchPressVision/Business/CalibBun/test/: CMakeLists.txt
PunchPressVision/Business/CameraBun/: CMakeLists.txt
PunchPressVision/Business/CameraBun/src/: CameraBun.cpp  CameraImgConvert.cpp
PunchPressVision/Business/CameraBun/test/: CMakeLists.txt
PunchPressVision/Business/HealthMonitorBun/: CMakeLists.txt
PunchPressVision/Business/HealthMonitorBun/src/: HealthMonitorBun.cpp
PunchPressVision/Business/LightControlBun/: CMakeLists.txt
PunchPressVision/Business/LightControlBun/src/: LightControlBun.cpp
PunchPressVision/Business/LightControlBun/test/: CMakeLists.txt
PunchPressVision/Business/NinePointBun/: CMakeLists.txt
PunchPressVision/Business/NinePointBun/src/: NinePointBun.cpp
PunchPressVision/Business/NinePointBun/test/: CMakeLists.txt
PunchPressVision/Business/ShapeModeManagerBun/: CMakeLists.txt
PunchPressVision/Business/ShapeModeManagerBun/src/: ShapeModeManagerBun.cpp
PunchPressVision/Business/ShapeModeManagerBun/test/: CMakeLists.txt
PunchPressVision/Business/TwoCameraSpliceBun/: CMakeLists.txt
PunchPressVision/Business/TwoCameraSpliceBun/src/: TwoCameraSpliceBun.cpp
PunchPressVision/Business/TwoCameraSpliceBun/test/: CMakeLists.txt
PunchPressVision/UI/: CMakeLists.txt
PunchPressVision/UI/Controls/HalconDisplayLabel/: CMakeLists.txt
PunchPressVision/UI/Controls/HalconWidgets/: CMakeLists.txt  DESIGN.md
PunchPressVision/UI/PunchPressUI/: CMakeLists.txt
PunchPressVision/UI/PunchPressUI/src/: DistortionCalibDialog.cpp  HalconView.cpp  ModelEditorDialog.cpp  ModelManagerDialog.cpp  NinePointCalibDialog.cpp  OffsetEditorDialog.cpp  PunchPress.cpp  ShapeModelListModel.cpp  SpliceDialog.cpp
PunchPressVision/UI/PunchPressUI/ui/: DlgJiudianbiaoding.ui  DlgModelManager.ui  Dlg_ImageStitching.ui  Dlg_OffsetEditor.ui  Dlg_createshapemodel.ui  PunchPress.ui
PunchPressVision/UI/UIModule/: CMakeLists.txt
PunchPressVision/UI/UIModule/include/: DlgJiudianbiaoding.h  Dlg_ImageStitching.h  Dlg_OffSet.h  Dlg_changeshapemodel.h  Dlg_createshapemodel.h  Dlg_jibianjiaozheng.h  PictureViewerThumbnails.h  PunchPress.h
PunchPressVision/UI/UIModule/qrc/: Dlg_createshapemodel.qrc
PunchPressVision/UI/UIModule/src/: DlgJiudianbiaoding.cpp  Dlg_ImageStitching.cpp  Dlg_OffSet.cpp  Dlg_changeshapemodel.cpp  Dlg_createshapemodel.cpp  Dlg_jibianjiaozheng.cpp  PictureViewerThumbnails.cpp  PunchPress.cpp
PunchPressVision/UI/UIModule/ui/: Dlg_OffSet.ui  Dlg_changeshapemodel.ui  Dlg_createshapemodel.ui  Dlg_jibianjiaozheng.ui  PunchPress.ui
PunchPressVision/UI/src/: main.cpp
PunchPressVision/app/: CMakeLists.txt
PunchPressVision/global/: CMakeLists.txt
PunchPressVision/global/include/global/: BuildVersion.hpp.in  GlobalInterface.hpp  GlobalPath.hpp  GlobalReadiness.hpp  GlobalResult.hpp  GlobalType.hpp  VersionChecker.hpp
PunchPressVision/global/src/: GlobalInterface.cpp  GlobalPath.cpp  GlobalType.cpp  VersionChecker.cpp
PunchPressVision/infTool/: CMakeLists.txt
PunchPressVision/infTool/CalibBun/: CMakeLists.txt
PunchPressVision/infTool/CalibBun/src/: CalibBun.cpp
PunchPressVision/infTool/CalibInfTool/: CMakeLists.txt
PunchPressVision/infTool/CalibInfTool/src/: CalibInfTool.cpp
PunchPressVision/infTool/CalibInfTool/test/: CMakeLists.txt
PunchPressVision/infTool/CameraBun/: CMakeLists.txt
PunchPressVision/infTool/CameraBun/src/: CameraBun.cpp  CameraImgConvert.cpp
PunchPressVision/infTool/CameraBun/test/: CMakeLists.txt
PunchPressVision/infTool/NinePointBun/: CMakeLists.txt
PunchPressVision/infTool/NinePointBun/src/: NinePointBun.cpp
PunchPressVision/infTool/NinePointBun/test/: CMakeLists.txt
PunchPressVision/infTool/NinePointInfTool/: CMakeLists.txt
PunchPressVision/infTool/NinePointInfTool/src/: NinePointInfTool.cpp
PunchPressVision/infTool/NinePointInfTool/test/: CMakeLists.txt
PunchPressVision/infTool/TwoCameraSpliceBun/: CMakeLists.txt
PunchPressVision/infTool/TwoCameraSpliceBun/src/: TwoCameraSpliceBun.cpp
PunchPressVision/infTool/TwoCameraSpliceBun/test/: CMakeLists.txt
PunchPressVision/infTool/TwoCameraSpliceInfTool/: CMakeLists.txt
PunchPressVision/infTool/TwoCameraSpliceInfTool/src/: TwoCameraSpliceInfTool.cpp
PunchPressVision/infTool/TwoCameraSpliceInfTool/test/: CMakeLists.txt
PunchPressVision/infTool/infTool/: CMakeLists.txt
PunchPressVision/infTool/infTool/src/: infTool.cpp
PunchPressVision/infTool/infTool/test/: CMakeLists.txt
PunchPressVision/infrastructure/: CMakeLists.txt
PunchPressVision/infrastructure/CalibConfigModule/: CMakeLists.txt
PunchPressVision/infrastructure/CalibConfigModule/src/: CalibConfigModule.cpp  CalibConfigModulePath.cpp  CalibConfigModuleTypes.cpp
PunchPressVision/infrastructure/CalibConfigModule/test/: CMakeLists.txt
PunchPressVision/infrastructure/CameraModule/: CMakeLists.txt
PunchPressVision/infrastructure/ConfigModule/: CMakeLists.txt
PunchPressVision/infrastructure/ControlModule/: CMakeLists.txt
PunchPressVision/infrastructure/LightIOModule/: CMakeLists.txt
PunchPressVision/infrastructure/NinePointModule/: CMakeLists.txt
PunchPressVision/infrastructure/ShapeModelManagerModule/: CMakeLists.txt
PunchPressVision/infrastructure/TwoCameraSpliceModule/: CMakeLists.txt
PunchPressVision/infrastructure/infrastructure/: CMakeLists.txt
(+227 files in other folders)
