add_subdirectory(CameraModule)
add_subdirectory(ConfigModule)
add_subdirectory(CalibConfigModule)
add_subdirectory(TwoCameraSpliceModule)
add_subdirectory(NinePointModule)
add_subdirectory(ShapeModelManagerModule)
add_subdirectory(ControlModule)
add_subdirectory(LightIOModule)
add_subdirectory(infrastructure)
